# philosophers

./: .gitignore  CMakeLists.txt  README.md
philo/: Makefile  philo
philo/inc/: philo.h
philo/src/: create_phs.c  debug.c  ft_atoi.c  ph_do.c  philo.c  print_log.c  time.c  utils.c
philo_bonus/: Makefile
philo_bonus/inc/: philo_bonus.h
philo_bonus/src/: check.c  debug.c  lunch.c  philo_bonus.c  process.c  time.c  utils.c
training/: codevault.c  learncinfo0.c  learncinfo1.c  main0.c  test.c  test.h  test2.c
